--- a/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/fragment_dialog.xml
@@ -8,18 +8,26 @@
     android:layout_gravity="center"
     android:background="@drawable/chch_dialog_shadow">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:gravity="center_vertical"
-        android:textSize="@dimen/activity_xlarge_text_size"
-        android:id="@+id/dialogTitle"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/dialogTitleContainer">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@color/gray"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/activity_xlarge_text_size"
+            android:id="@+id/dialogTitle"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@color/gray"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -27,44 +35,52 @@
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:id="@+id/dialogMessage"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:background="@drawable/chch_button_dialog_left"
-            android:textColor="@color/app_text"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:id="@+id/dialogCancelButton" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/dialogButtonContainer">
 
         <ImageView
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
             android:background="@color/gray"/>
 
-        <Button
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="15dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:background="@drawable/chch_button_dialog_right"
-            android:textColor="@color/app_text"
-            android:textAllCaps="true"
-            android:textStyle="bold"
-            android:id="@+id/dialogAcceptButton"/>
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:padding="15dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/chch_button_dialog_left"
+                android:textColor="@color/app_text"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:id="@+id/dialogCancelButton" />
+
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray"/>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:padding="15dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:background="@drawable/chch_button_dialog_right"
+                android:textColor="@color/app_text"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:id="@+id/dialogAcceptButton"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
