--- a/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_edittext.xml
+++ b/android-application/ChineseCheckers/src/main/res/drawable-mdpi/chch_edittext.xml
@@ -2,10 +2,24 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip"/>
+            <solid  android:color="@color/app_button_pressed"/>
+        </shape>
+    </item>
+
+    <item android:state_focused="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="5dip"/>
+            <solid  android:color="@color/app_button"/>
+        </shape>
+    </item>
+
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="5dip" />
-            <solid  android:color="@color/white"/>
+            <corners android:radius="5dip"/>
+            <solid  android:color="@color/app_button"/>
         </shape>
     </item>
 
