--- a/android-application/ChineseCheckers/src/main/res/layout/activity_offline_configuration.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_offline_configuration.xml
@@ -2,7 +2,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +23,7 @@
             android:textSize="@dimen/activity_xxlarge_text_size"
             android:textStyle="bold"
             android:textAllCaps="true"
-            android:text="@string/offline" />
+            android:text="@string/play_offline" />
 
         <ImageView
             android:layout_width="24dp"
