--- a/android-application/ChineseCheckers/src/main/res/layout/activity_online_list.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_online_list.xml
@@ -1,13 +1,69 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hi"/>
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:gravity="right"
+        android:orientation="horizontal"
+        android:id="@+id/titleHeaderContainer">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:gravity="center_vertical|left"
+            android:textSize="@dimen/activity_xxlarge_text_size"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:text="@string/play_online" />
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="48dp"
+            android:src="@drawable/logo_image"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+        </LinearLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:gravity="center|bottom"
+        android:orientation="vertical" >
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="15dp"
+            android:gravity="right|center_horizontal"
+            android:drawableLeft="@drawable/ic_action_warning"
+            android:textSize="@dimen/activity_xlarge_text_size"
+            android:textAllCaps="true"
+            android:text="@string/online_new_game"
+            android:id="@+id/onlineNewGameButton" />
+
+    </LinearLayout>
 
 </LinearLayout>
