--- a/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
+++ b/android-application/ChineseCheckers/src/main/res/layout/activity_settings.xml
@@ -1,13 +1,113 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:focusable="false"
+    android:focusableInTouchMode="true">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hi"/>
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:gravity="center_vertical|left"
+            android:textSize="@dimen/activity_xxlarge_text_size"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:text="@string/title_activity_settings" />
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="48dp"
+            android:src="@drawable/logo_image"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/settings_show_possible_moves"/>
+
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/chch_switch_left"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:textColor="@color/app_background"
+                        android:textStyle="bold"
+                        android:text="ON"/>
+
+                    <RadioButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/chch_switch_right"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:textColor="@color/app_background"
+                        android:textStyle="bold"
+                        android:text="OFF"/>
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/settings_your_username"/>
+
+            <EditText
+                android:textColorHint="@color/app_background"
+                android:gravity="center_vertical|left"
+                android:padding="5dp"
+
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_gravity="left"
+                android:inputType="text|textNoSuggestions"
+                android:hint="my.username"
+                android:singleLine="true"
+                android:background="@drawable/chch_edittext"
+                android:textColor="@color/app_text"
+                android:id="@+id/settingsUsernameEditText"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
